# srack_lang

./: .gitignore  Cargo.toml  README.md  main.srack
src/: interpreter.rs  main.rs  srack.rs  srack_item.rs  srack_value.rs  token.rs
src/interpreter/: srack.rs  srack_value.rs  token.rs
tests/: lang_tests.rs
